--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&display=swap" rel="stylesheet" />
 
   <!-- JSON-LD -->
+
+<script type="application/ld+json">
   
   {
     "@context": "https://schema.org",
@@ -42,11 +44,12 @@
   </script>
 </head>
 <body>
-  <header>
+  <header id="top" >
     <nav class="navbar">
    <button class="menu-toggle" aria-label="Abrir menu">&#9776;</button>
       <div class="menu-wrapper">
         <ul class="menu">
+        <li><a href="#top">Início</a></li>
           <li><a href="#sobre">Sobre mim</a></li>
           <li><a href="#servicos">Especialidades</a></li>
           <li><a href="#contato">Contato</a></li>
@@ -66,7 +69,7 @@
     <div class="hero-content"></div>
   </section>
 
-  <section id="sobre" class="section">
+  <section id="sobre" class="section fade-up">
     <div class="container">
       <h1 class="section-title">Sobre mim</h1>
       <p>Sou Isabela Ferreira Torres, psicóloga clínica (CRP 04/57982), atuando em Minas Gerais de forma presencial e on-line em todo o mundo. Minha prática é orientada pela psicanálise, com escuta qualificada, ética e respeito à singularidade.</p>
@@ -74,7 +77,7 @@
     </div>
   </section>
 
-  <section id="servicos" class="section">
+  <section id="servicos" class="section fade-up">
     <div class="container">
       <h2 class="section-title">Especialidades</h2>
       <p class="section-sub">Atendo uma ampla variedade de temáticas. Abaixo, algumas das especialidades:</p>
@@ -125,7 +128,7 @@
     </div>
   </section>
 
-  <section id="contato" class="section">
+  <section id="contato" class="section fade-up">
     <div class="container">
       <h2 class="section-title">Contato</h2>
       <p>WhatsApp: <a href="https://wa.me/31997276603" target="_blank" rel="noopener">(31)99727-6603</a></p>
